--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -22,7 +22,7 @@ jobs:
           uses: actions/setup-go@v5
           with:
             go-version: "1.25"
-            cache: true
+            #cache: true
 
         - name: verify dependencies
           working-directory: ./backend
