add install npm

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -21,8 +21,8 @@ jobs:
           uses: actions/setup-node@v4
           with:
             node-version: "24" 
-            cache: 'npm'
-            cache-dependency-path: frontend/package-lock.json
+        - name: Install HTMLHint
+          run: npm install -g htmlhint
 
         - name: run lint
           working-directory: ./frontend
