change the nginx.conf and image to the same contest

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes auto;
-error_log /var/log/nginx/error.log notice;
-pid /run/nginx.pid;
+error_log /dev/stderr notice;
+pid /tmp/nginx.pid;
 
 include /usr/share/nginx/modules/*.conf;
 
@@ -13,7 +13,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log /dev/stdout main;
 
     sendfile            on;
     tcp_nopush          on;
@@ -22,9 +22,7 @@ http {
 
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
-
-    include /opt/app-root/etc/nginx.d/*.conf;
-
+    
     resolver dns-default.openshift-dns.svc.cluster.local valid=30s;
     resolver_timeout 5s;
 
@@ -36,11 +34,10 @@ http {
         listen 8080 default_server;
         server_name _;
 
-        root /opt/app-root/src;
+        root /usr/share/nginx/html;
         index index.html;
 
-        include /opt/app-root/etc/nginx.default.d/*.conf;
-        
+
         location / {
             try_files $uri $uri/ /index.html;
         }
