--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM registry.access.redhat.com/ubi10/nginx-126:10.0
 
 COPY index.html /usr/share/nginx/html/index.html
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
 USER 1001
 
